# stockmind

./: Cargo.toml  bacon.toml
.cargo/: config.toml
src/: main.rs
